--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ gunicorn==21.2.0
 pydantic==2.3.0
 requests==2.31.0
 python-dotenv==1.0.0
+# Adicione aqui qualquer outro pacote relacionado ao MCP se for público
+from mcp.server.fastmcp import FastMCP
+from discord_api import DiscordAPI
