--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fastapi==0.103.1
-uvicorn==0.23.2
-gunicorn==21.2.0
-pydantic==2.3.0
-requests==2.31.0
-python-dotenv==1.0.0
+fastapi>=0.104.0
+uvicorn>=0.23.2
+pydantic>=2.3.0
+requests>=2.31.0
+python-dotenv>=1.0.0
+gunicorn>=21.2.0
 
 # Current FastMCP SDK
 git+https://github.com/modelcontextprotocol/python-sdk.git@main
