--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: discord-mcp-api
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn main:app -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT
+    startCommand: uvicorn main:app --host 0.0.0.0 --port ${PORT}
     envVars:
       - key: DISCORD_TOKEN
         sync: false
