--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: discord-mcp-api
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port ${PORT}
+    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
     envVars:
       - key: DISCORD_TOKEN
         sync: false
